# Website-Cloning-Web-App

./: DEVNOTES.md  package-lock.json
backend/: pyproject.toml
backend/app/: api.py  main.py  test_gpt.py
frontend/: package-lock.json  package.json
frontend/src/app/: Footer.jsx  Footer.tsx  Header.jsx  Header.tsx  globals.css  layout.tsx  page.tsx
