[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "charset-normalizer>=3.4.2",
    "fastapi[standard]>=0.115.12",
    "hyperbrowser>=0.45.1",
    "jiter>=0.10.0",
    "jsonref>=1.1.0",
    "openai>=1.84.0",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "urllib3>=2.4.0",
]
